--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "host-test-front-end",
-  "version": "0.0.1",
-  "description": "Prova criada para avaliar os candidatos de frontEnd",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://tqi_lguerreiro@stash.uol.intranet/scm/uh/teste-front-end.git"
-  },
-  "author": "UOL HOST",
+  "name": "teste-uol",
+  "version": "1.0.0",
+  "title": "Teste uol",
+  "homepage": "http://www.yoursite.com.br",
   "devDependencies": {
-    "connect": "^3.4.1",
-    "open": "0.0.5",
-    "serve-static": "^1.11.1"
+    "grunt": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
